codex-rs/tui/src/snapshots/codex_tui__diff_render__tests__add_details.snap
---
source: tui/src/diff_render.rs
expression: terminal.backend()
---
"• 拟议更改 README.md (+2 -0)                                                    " Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " ")]
"    1     +first line                                                           "
"    2     +second line                                                          "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
