codex-rs/tui/src/snapshots/codex_tui__diff_render__tests__apply_add_block.snap
---
source: tui/src/diff_render.rs
expression: terminal.backend()
---
"• 新增 new_file.txt (+2 -0)                                                     " Hidden by multi-width symbols: [(3, " "), (5, " ")]
"    1     +alpha                                                                "
"    2     +beta                                                                 "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
