codex-rs/tui/src/snapshots/codex_tui__diff_render__tests__apply_delete_block.snap
---
source: tui/src/diff_render.rs
expression: terminal.backend()
---
"• 删除 tmp_delete_example.txt (+0 -3)                                           " Hidden by multi-width symbols: [(3, " "), (5, " ")]
"    1     -first                                                                "
"    2     -second                                                               "
"    3     -third                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
