codex-rs/tui/src/snapshots/codex_tui__diff_render__tests__apply_update_block.snap
---
source: tui/src/diff_render.rs
expression: terminal.backend()
---
"• 已编辑 example.txt (+1 -1)                                                    " Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " ")]
"    1      line one                                                             "
"    2     -line two                                                             "
"    2     +line two changed                                                     "
"    3      line three                                                           "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
