codex-rs/tui/src/snapshots/codex_tui__diff_render__tests__apply_update_block_manual.snap
---
source: tui/src/diff_render.rs
expression: terminal.backend()
---
"• 更改已批准 example.txt (+1 -1)                                                " Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " "), (11, " ")]
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
