codex-rs/tui/src/snapshots/codex_tui__diff_render__tests__apply_update_block_relativizes_path.snap
---
source: tui/src/diff_render.rs
expression: terminal.backend()
---
"• 已编辑 abs_old.rs → abs_new.rs (+1 -1)                                        " Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " ")]
"    1     -X                                                                    "
"    1     +X changed                                                            "
"    2      Y                                                                    "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
