codex-rs/tui/src/snapshots/codex_tui__diff_render__tests__apply_update_with_rename_block.snap
---
source: tui/src/diff_render.rs
expression: terminal.backend()
---
"• 已编辑 old_name.rs → new_name.rs (+1 -1)                                      " Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " ")]
"    1      A                                                                    "
"    2     -B                                                                    "
"    2     +B changed                                                            "
"    3      C                                                                    "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
