codex-rs/tui/src/snapshots/codex_tui__diff_render__tests__update_details_with_rename.snap
---
source: tui/src/diff_render.rs
expression: terminal.backend()
---
"• 拟议更改 src/lib.rs → src/lib_new.rs (+1 -1)                                  " Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " ")]
"    1      line one                                                             "
"    2     -line two                                                             "
"    2     +line two changed                                                     "
"    3      line three                                                           "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
