codex-rs/tui/src/snapshots/codex_tui__diff_render__tests__vertical_ellipsis_between_hunks.snap
---
source: tui/src/diff_render.rs
expression: terminal.backend()
---
"• 拟议更改 example.txt (+2 -2)                                                  " Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " ")]
"    1      line 1                                                               "
"    2     -line 2                                                               "
"    2     +line two changed                                                     "
"    3      line 3                                                               "
"    4      line 4                                                               "
"    5      line 5                                                               "
"    ⋮                                                                           "
"    6      line 6                                                               "
"    7      line 7                                                               "
"    8      line 8                                                               "
"    9     -line 9                                                               "
"    9     +line nine changed                                                    "
"    10     line 10                                                              "
"                                                                                "
"                                                                                "
